Top level design_v1.0

--- a/总体设计.md
+++ b/总体设计.md
@@ -23,7 +23,7 @@
 4. 战斗
 
    1. 玩家角色行为
-   2. 非玩家角色行为
+   2. 非玩家操控角色(NPC)行为
    3. 伤害的计算与判定
 
 5. 界面
@@ -38,7 +38,7 @@
 
 #### 武器
 
-玩家武器将由若干枪械组成，武器的类型以及配件将会对玩家对NPC产生不同的伤害效果(武器可能无法全部实现，具体实现程度以工期为准)
+玩家武器将由若干枪械组成，武器的类型以及配件将会对玩家对NPC产生不同的伤害效果(武器可能无法全部实现，初步希望实现其中的2~3种，具体实现程度以工期为准)
 
 武器类型及其对应的特殊效果为：
 
@@ -74,23 +74,147 @@
 
 #### 主动技能
 
+主动技能为玩家可以选择施放，存在持续时间与冷却时间的辅助型功能。初步规划3种不同的技能：
 
+1. 治疗
+2. 提供直接伤害
+3. 增加武器伤害
+
+每一种主动技能均有改造，改造将在某些方面对技能有等量的加强与削弱
+
+主动技能将使用**状态模式**进行操控
+
+#### 被动技能
+
+被动技能为玩家无法主动选择施放，只在特定场合下触发的辅助型功能。
+
+### 玩家道具
+
+玩家道具初步设定为急救包(回复一定量的生命，有使用个数限制)，以及投掷物(待定，根据进度实现)
+
+### 玩家经验
+
+通过击杀NPC，玩家可以获得经验。经验将会根据NPC的熟练度，击杀方式(爆头,技能等)有一定的区别
+
+每次获取的基础经验量相等，每一级的经验值需求相等
+
+升级可以获取技能点数，点数可以用于解锁技能，也可以用于购买武器
+
+经验将采用**装饰者模式**进行生成
 
 ---
 
 ## 非玩家控制角色(NPC)
 
+NPC将由**原型模式**进行初始创建，并使用**装饰者模式**进行角色种类及角色熟练度的划分
 
+### 角色种类
+
+NPC将由不同的种类，每一种种类的行为会有轻微的区别，造成的伤害会根据角色熟练度有浮动
+
+角色种类与特殊效果为：
+
+| 角色种类 | 角色特殊效果     | 角色行为偏好                   |角色伤害|
+| -------- | ---------------- | ------------------------------ | ------------------------------ |
+| 普通步兵 | 无               | 偏向于躲入掩体中               |中等|
+| 狂战士   | 近距离时伤害增加 | 偏向于逐渐向玩家靠近(离开掩体) |偏高(精准度较低)|
+| 重甲步兵 | 拥有较高的生命值 | 偏向于离开掩体并持续向玩家射击 |偏低|
+
+### 角色熟练度
+
+角色的熟练度将决定NPC的伤害与血量变化，进而决定游戏的难度
+
+角色熟练度及对应效果如下：
+
+| 角色熟练度   | 生命值加成 | 伤害加成 |
+| ------------ | ---------- | -------- |
+| 普通(红色)   | x 1.0      | x 1.0    |
+| 老练(深蓝色) | x 1.5      | x 1.2    |
+| 精英(金色)   | x 2.0      | x 1.5    |
+
+角色熟练度将不会对角色的基础行为产生影响
 
 ---
 
 ## 场景
 
+场景是承载游戏中所有计算的对象。在战斗场景中，场景将负责对于玩家与NPC伤害的计算，NPC的操作等
 
+场景将使用**工厂模式**进行创建
+
+### 场景划分
+
+场景将分为战斗场景与非战斗场景两类
+
+战斗场景中，会根据玩家所选的难度，生成对应数量及熟练度的NPC。
+
+非战斗场景中，玩家可以对技能/武器进行修改，主动技能同时也能完成冷却。
+
+### 场景元素
+
+战斗场景：
+
+​	掩体。掩体作为战斗场景中，较为重要的一个元素。玩家可以在进入战斗场景时，选择不同的掩体，同时也能在战斗过程中进行切换。掩体只能决定玩家与NPC之间的距离，而距离将对命中率和伤害产生一定的影响。
+
+​	对于NPC，同样也存在掩体，但NPC的掩体将不存在距离差距，仅能决定玩家对于NPC的命中概率。
+
+​	战斗场景距离与掩体示意如下：
+
+|   NPC所在区域   |
+| :-------------: |
+|    空闲区域     |
+| **掩体-近距离** |
+| **掩体-中距离** |
+| **掩体-远距离** |
+
+非战斗场景：
+
+​	非战斗场景是用于连接各战斗场景的部分，将不会有额外的元素
+
+​	非战斗场景-行动基地将提供对于医疗包的补给、技能的解锁以及武器的购买操作
 
 ---
 
 ## 战斗
+
+战斗采用回合制，当玩家决定了接下来一小段时间的行为后，场景才会对这一小段时间进行模拟，并给出最终结果
+
+### 玩家角色行为
+
+进入一个新的战斗场景时，玩家可以在NPC做出行为前，选择一个掩体。当掩体选择完毕后，即进入了战斗状态
+
+每一次以4个行动点的时间作为基础，玩家需要规划接下来4个行动点的行为
+
+战斗状态中的玩家行为及消耗行动点如下：
+
+| 玩家行为     | 行为介绍                                                     | 行动点消耗 |
+| ------------ | ------------------------------------------------------------ | ---------- |
+| 无操作       | 将视为隐蔽在掩体后，敌对伤害仅有较低的命中率                 | 1          |
+| 使用技能     | 启用任意一项已装备技能                                       | 2          |
+| 使用医疗包   | 恢复50%的生命值                                              | 2          |
+| 切换掩体     | 切换至其他可用的掩体                                         | 4          |
+| 更换弹匣     | 重置“弹匣内余弹数量”                                         | 2          |
+| 概略射击     | 在不探出掩体情况下，对敌人进行一个基数的概略射击，敌对伤害命中率增加，自身命中率降低 | 1          |
+| 抵肩         | 探出掩体，对敌人进行精确瞄准，敌对伤害命中率增加             | 1          |
+| 抵肩射击     | (需要抵肩操作)，对敌人进行一个基数的射击                     | 1          |
+| 精确瞄准     | 探出掩体，使用瞄准具，对敌人进行精确瞄准，敌对伤害命中率增加，自身命中率提高并有更大几率命中头部 | 2          |
+| 精确瞄准射击 | (需要精确瞄准操作)，对敌人进行一个基数的射击                 | 1          |
+
+在一个阶段内，玩家可以自由组合对应的操作，使其消耗不大于4个行动点。对于未达到4个行动点的部分，将自动填充无操作。对于所有的操作，将使用**策略模式**进行构造，而对于射击部分的操作，将采用**模板方法模式**进行构造，执行时，采用**命令模式**进行实现
+
+### 非玩家角色(NPC)行为
+
+战斗时，NPC与玩家拥有类似的行为，NPC将不存在弹药的限制
+
+每一个NPC将随机采用各个行为
+
+| NPC行为       | 行为介绍                                         | 行动点 |
+| ------------- | ------------------------------------------------ | ------ |
+| 无操作        | 将视为隐蔽在掩体后，敌对伤害仅有较低的命中率     | 1      |
+| 抵肩          | 探出掩体，对敌人进行精确瞄准，敌对伤害命中率增加 | 1      |
+| 抵肩射击      | (需要抵肩操作)，对敌人进行一个基数的射击         | 1      |
+| 移动          | (狂战士)向玩家方向进行移动，缩减距离             | 4      |
+| 进入/离开掩体 | 进入或离开当前掩体                               | 2      |
 
 ### 伤害的计算与判定
 
@@ -104,15 +228,15 @@
 
 具体计算公式为：
 
-​	`单次伤害 = 武器基础伤害 * ( 暴击判定 * 暴击伤害 ) * 爆头伤害 * 加成伤害 * 伤害减免指数 * 等级差距指数`
+​	`单次伤害 = 武器基础伤害 * ( 暴击判定 * 暴击伤害 ) * 爆头伤害 * 加成伤害 * 伤害减免指数`
 
 击中判定将在每次一单次伤害造成前进行运算，最终伤害=所有有效击中的单次伤害之和
 
 #### 伤害计算-NPC
 
-NPC对玩家的伤害将由**策略模式**进行计算
+NPC对玩家的伤害将由**策略模式**与*装饰者模式**进行计算
 
-由于NPC不存在武器与配件的多样化，只有种类与熟练度的区别，因此NPC造成的单次伤害相对固定，可以划归策略模式处理
+由于NPC不存在武器与配件的多样化，只有种类与熟练度的区别，因此NPC造成的单次伤害相对固定，可以划归策略模式处理。由于NPC在熟练度上有细微差距，因此最后的伤害同样会由**装饰者模式**进行输出
 
 #### 伤害判定
 
